Appssential 2015/src/objects/User_Story__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_to_email1__c</fullName>
        <label>Assigned to email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assigned_to_email__c</fullName>
        <formula>if(Text(US_Currently_Assigned_to__c) = &apos;Swapna&apos;,&apos;swapna@appssential.com&apos;,if(Text(US_Currently_Assigned_to__c)= &apos;Courtney&apos;,&apos;courtney@appssential.com&apos;,IF(Text(US_Currently_Assigned_to__c)=&apos;Veer&apos;,&apos;veer@appssential.com&apos;,IF(Text(US_Currently_Assigned_to__c)=&apos;Robbie&apos;,&apos;robbie@appssential.com&apos;,IF(Text(US_Currently_Assigned_to__c)=&apos;Aung&apos;,&apos;aung@appssential.com&apos;,&apos;&apos;)))))</formula>
        <label>Assigned to email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_Email1__c</fullName>
        <label>Reporter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reporter_Email__c</fullName>
        <formula>if(Text(US_Reporter__c) = &apos;Swapna&apos;,&apos;Swapna@appssential.com&apos;,if(Text(US_Reporter__c)= &apos;Courtney&apos;,&apos;courtney@appssential.com&apos;,IF(Text(US_Reporter__c)=&apos;Robbie&apos;,&apos;robbie@appssential.com&apos;,IF(Text(US_Reporter__c)=&apos;Aung&apos;,&apos;aung@appssential.com&apos;,&apos;&apos;))))</formula>
        <label>Reporter Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Time_To_Code__c</fullName>
        <label>Total Actual Time To Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Time_To_Test__c</fullName>
        <label>Total Actual Time To Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Time_To_Test__c</fullName>
        <label>Total Estimated Time To Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>US_Allocated_Time_in_Minutes__c</fullName>
        <label>Allocated Time (in Minutes)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>US_Currently_Assigned_to__c</fullName>
        <inlineHelpText>Who is currently working on this.</inlineHelpText>
        <label>Currently Assigned to</label>
        <picklist>
            <picklistValues>
                <fullName>Anil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ankit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courtney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Naval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robbie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swapna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>US_Dependency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>is dependent on this user story.</inlineHelpText>
        <label>Dependency</label>
        <referenceTo>User_Story__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>US_Description__c</fullName>
        <inlineHelpText>This is a brief description of user&apos;s requirements</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>US_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>US_Epic__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this going to take more than 5 days.</inlineHelpText>
        <label>Epic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>US_MoSCoW_Ranking__c</fullName>
        <inlineHelpText>Must have, Should have, Could have, Won&apos;t have</inlineHelpText>
        <label>MoSCoW Ranking</label>
        <picklist>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>US_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>US_Project__c</fullName>
        <formula>US_Opportunity__r.Account.Name &amp; &quot; - &quot; &amp;  US_Opportunity__r.Name</formula>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Reporter__c</fullName>
        <label>Reporter</label>
        <picklist>
            <picklistValues>
                <fullName>Anil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ankit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courtney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robbie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swapna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>US_Sprint__c</fullName>
        <label>Sprint</label>
        <picklist>
            <picklistValues>
                <fullName>Sprint 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>US_Stages__c</fullName>
        <inlineHelpText>What&apos;s the current stage of this particular user story.</inlineHelpText>
        <label>Stages</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed onto Production</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>US_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>US_Total_Estimated_Time_To_Code__c</fullName>
        <label>Total Estimated Time To Code</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>US_Total_Estimated_Time_To_Code_in_Hrs__c</fullName>
        <formula>US_Total_Estimated_Time_To_Code__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Estimated Time To Code in Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>US_User_Story__c</fullName>
        <inlineHelpText>A description of the requirement from the user&apos;s point of view in details.</inlineHelpText>
        <label>User Story</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>US_see_key_How_Met__c</fullName>
        <inlineHelpText>How would you categorise this requirement as?</inlineHelpText>
        <label>see key (How Met)</label>
        <picklist>
            <picklistValues>
                <fullName>1. Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. 3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Combination of Standard &amp; 3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Custom Report/List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Custom Workflow / Trigger / Coding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Interface with external system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Gap - development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Process Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>US_Start_Date__c</columns>
        <columns>US_End_Date__c</columns>
        <columns>US_Description__c</columns>
        <columns>US_Currently_Assigned_to__c</columns>
        <columns>US_Dependency__c</columns>
        <columns>US_Sprint__c</columns>
        <columns>US_Stages__c</columns>
        <columns>US_Opportunity__c</columns>
        <columns>US_Epic__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Assign_To_Veer</fullName>
        <columns>NAME</columns>
        <columns>US_Start_Date__c</columns>
        <columns>US_End_Date__c</columns>
        <columns>US_Description__c</columns>
        <columns>US_Opportunity__c</columns>
        <columns>US_User_Story__c</columns>
        <columns>US_Stages__c</columns>
        <columns>Total_Actual_Time_To_Code__c</columns>
        <columns>US_Allocated_Time_in_Minutes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>US_Currently_Assigned_to__c</field>
            <operation>equals</operation>
            <value>Veer</value>
        </filters>
        <label>Assign To Veer</label>
    </listViews>
    <listViews>
        <fullName>Recently_Added_User_Stories</fullName>
        <columns>CREATED_DATE</columns>
        <columns>US_Sprint__c</columns>
        <columns>NAME</columns>
        <columns>US_User_Story__c</columns>
        <columns>US_Project__c</columns>
        <columns>US_Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>Recently Added User Stories</label>
    </listViews>
    <listViews>
        <fullName>Repoter_Jeff</fullName>
        <columns>NAME</columns>
        <columns>US_Start_Date__c</columns>
        <columns>US_Description__c</columns>
        <columns>US_Opportunity__c</columns>
        <columns>US_User_Story__c</columns>
        <columns>US_Stages__c</columns>
        <columns>Total_Actual_Time_To_Code__c</columns>
        <columns>US_Allocated_Time_in_Minutes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>US_Reporter__c</field>
            <operation>equals</operation>
            <value>Jeff</value>
        </filters>
        <label>Repoter Jeff</label>
    </listViews>
    <nameField>
        <displayFormat>US-{0000000000}</displayFormat>
        <label>User Story ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>